Fix: adaptation firefox

--- a/app/components/Navbar/NavBar.module.scss
+++ b/app/components/Navbar/NavBar.module.scss
@@ -3,8 +3,11 @@
 
 .container {
   position: fixed;
+  top: 0;
+  left: 0;
+  max-width: 100dvw;
   z-index: 4;
-  width: 100vw;
+  width: 100%;
   height: 6rem;
   font-size: fct.map-deep-get(var.$navbar, "fontSize", "container");
   font-weight: fct.map-deep-get(var.$navbar, "fontWeight", "container");
@@ -28,7 +31,6 @@
 
     @media screen and (max-width: var.$breakpoint-tablette) {
       flex: 10;
-      width: 100vw;
       flex-direction: column;
       justify-content: center;
       align-items: center;
